tests/sql_correctness/snapshots/query_join_queries__1.snap
---
source: tests/sql_correctness.rs
expression: formatted
---
Query: SELECT a.aid, a.abalance, b.bbalance FROM pgbench_accounts a JOIN pgbench_branches b ON a.bid = b.bid WHERE a.aid <= 10

+-----+----------+----------+
| aid | abalance | bbalance |
+-----+----------+----------+
| 1   | 0        | 0        |
| 2   | 0        | 0        |
| 3   | 0        | 0        |
| 4   | 0        | 0        |
| 5   | 0        | 0        |
| 6   | 0        | 0        |
| 7   | 0        | 0        |
| 8   | 0        | 0        |
| 9   | 0        | 0        |
| 10  | 0        | 0        |
+-----+----------+----------+
